# simple_eggsample

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/eggsample/: eggsellent_cook.py
tests/: test_command_line_interface.py
