[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eggsample"
version = "0.1.0"
description = "The eggsample from an eggsellent cook"
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }

[project.scripts]
eggsample = "eggsample.command_line_interface:main"

[project.optional-dependencies]
test = ["pytest>=8.3.2,<9"]
